# oracle-enterprise-samples

./: README.md
docs/: local-dev.md  repo-overview.md
infra/: compose.yaml
infra/db/oracle/init/: 01_schema.sql  02_seed.sql  03_plans.sql  04_ai_setup.sql  05_synthetic_data.sql
samples/loan-origination/: README.md  demo.sh  logs.sh  reset.sh  teardown.sh
samples/loan-origination/curl/: 01_create_app.sh  02_add_kyc.sh  03_add_fraud.sh  04_add_credit.sh  05_decision_plan.sh  05_dry_run.sh  06_decision_execute.sh  06_execute.sh  07_execute_replay.sh  08_get_audit.sh  09_accept_offer.sh  10_create_booking.sh
samples/loan-origination/docs/: architecture.mmd  runbook.md  workflow.mmd
samples/loan-origination/payloads/: 05_decision_plan.json  06_decision_execute.json  application.json
services/decision_agent/agent_spec/: manifest.yaml  tools.yaml
services/decision_agent/src/decision_agent/: __init__.py  agent.py  runner.py
services/loan_api/: Containerfile  pyproject.toml
services/loan_api/src/loan_api/: __init__.py  db.py  decision.py  idempotency.py  main.py  models.py  planning.py
services/workflows/loan_origination_wayflow/: __init__.py  workflow.py
services/workflows/wayflow/: __init__.py  core.py
tools/scripts/: demo.sh  env.sh  logs.sh  reset.sh  teardown.sh
