[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loan-api"
version = "0.1.0"
description = "Loan Origination API Sample"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn>=0.23.0",
    "pydantic>=2.0.0",
    "oracledb>=2.0.0",
    "pyyaml>=6.0"
]

[tool.setuptools.packages.find]
where = ["src"]
